Fix footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -694,8 +694,8 @@ h1, h2, h3 {
 	}
 	#content{
 		margin-left: 200px;
-		margin-top: -51px;
-		padding-top: 71px;
+		margin-top: -50px;
+		padding-top: 70px;
 	}
 	.no-sidebar #content{
 		margin-left: 0px;
